fix: fixed the inline padding that was causing an alignment issue for tables

--- a/web/themes/interledger/css/components/table.css
+++ b/web/themes/interledger/css/components/table.css
@@ -18,10 +18,6 @@
   --table-fg-sm: var(--color-white);
 }
 
-.table-wrapper {
-  padding-inline: 5%;
-}
-
 .table-wrapper table {
   border-collapse: separate;
   border-spacing: 0;
